assets/css/component/breadcrumb.css
main > header.pagewidth {
    margin-top: var(--medskip);
    padding-left: calc(var(--void) - 0.5ex - 4pt);
    height: 2.5rem;
}

main > header > menu {
    float: right;
    visibility: hidden;
    margin: 0 0 0 auto;
    padding: 0;
}

main#term > header > menu,
main#page > header > menu {
    visibility: visible;
}

#back,
menu button,
menu a {
    border: unset;
    background: unset;
    padding: 1ex;
    color: inherit;
}

#back::before,
header menu button,
header menu a,
#join-discussion-bluesky,
#menu-footer a {
    display: inline-block;
    position: relative;
    padding: 5pt 0;
    width: 2.25em;
    text-align: center;
    font-size: var(--normalsize);
}

#bionReadSwitch + label,
#join-discussion,
#saveButton,
#share {
    border-radius: 2em;
    background: var(--fg);
    padding: 1ex 12pt;
    text-align: center;
    color: var(--bg);
    font-weight: 700;
}

menu button .t,
menu a .t,
#menu-footer a .t,
#join-discussion-bluesky > .t {
    --tsf: translate(-4.65em);
}

#rss-button::before {
    font-family: 'base-ui';
    content: '\e910';
}

#print-button::before {
    font-family: 'base-ui';
    content: '\e90c';
}

#navigatorShare::before {
    font-family: 'base-ui';
    content: '\e912';
}

#copyPermalink::before {
    font-family: base-ui;
    content: '\e905';
}

label .t::after,
main#term #print-button {
    visibility: hidden;
}

#back {
    position: relative;
    top: 3pt;
    float: left;
    padding: 0;
}

.pagination .rfill a::before,
.carousel__viewport__slide:last-child > nav a::before,
#back::before {
    --tsf: rotate(-90deg) translateX(1pt);
    font-family: base-ui;
    content: '\e902';
}

main > header > menu > li,
ul.breadcrumb > li {
    display: inline;
}

#has-breadcrumb a {
    margin: 2pt;
    padding: 0.5ex;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    color: var(--fg);
    font-size: var(--small);
}

ul.breadcrumb {
    display: block;
    padding: 5pt 0;
    overflow: auto;
    text-overflow: ellipsis;
    white-space: nowrap;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

ul.breadcrumb > li:last-child a {
    -webkit-user-select: none;
     -khtml-user-select: none;
       -moz-user-select: none;
        -ms-user-select: none;
            user-select: none;
    -webkit-touch-callout: none;
}

ul.breadcrumb > li + li:before {
    color: var(--mid);
    content: '/';
}

